Fixed alignment on New Dose page

--- a/app/assets/stylesheets/cocktails.scss
+++ b/app/assets/stylesheets/cocktails.scss
@@ -50,6 +50,7 @@ body {
 
 .begin-here {
   text-align: center;
+  margin-bottom: 80px;
 
   h4 {
     font-size: 25px;
@@ -60,7 +61,6 @@ body {
   display: flex;
   justify-content: space-around;
   margin-bottom: 40px;
-  margin-top: 80px;
 }
 
 
