--- a/app/assets/stylesheets/doses.scss
+++ b/app/assets/stylesheets/doses.scss
@@ -1,10 +1,14 @@
 // Place all the styles related to the doses controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
 .simple_form {
-  display: block;
+  text-align: center;
   margin-top: 40px;
+}
+
+.form-control {
+  width: 50%;
+  margin: auto;
 }
 
 .input {
